<resources>
    <string name="app_name">MakeItEven</string>

    <string name="Stage_mode">PLAY</string>

    <string name="Arcade_mode">PLAY ARCADE</string>

    <string name="main_sound">Main sound</string>

    <string name="sound_effects">Sound effects</string>

    <string name="Progress">are you sure you want to reset all your progress?</string>

    <string name="Yes">Yes</string>

    <string name="No">No</string>

    <string name="scoreBoard">ScoreBoard</string>

    <string name="correct_answer">Correct Answer</string>

    <string name="wrong_answer">Wrong Answer! you can always try again!</string>

    <string name="division">Division by 0 or not Neutral Division</string>

    <string name="game_reset">Game Reset</string>

    <string name="about_us">About Us</string>

    <string name="score">Score:</string>

    <string name="tutorial">TUTORIAL</string>

    <string name="back">Back</string>

    <string name="next">Next</string>

    <string name="time_up">Times Up!!</string>

    <string name="enter_nickname">Enter Nickname:</string>

    <string name="settings">Settings</string>

    <string name="reset_game_levels">Reset game levels</string>

    <string name="Congrats">Congrats you did it right!!!!</string>

    <string name="level_number">Level:</string>
    <string name="this_fild_requierd">This field required</string>
    <string name="invalid_fraction">Invalid division no fractions allowd</string>
    <string name="Dividing_by_0">Dividing by 0 is a math error</string>
    <string-array name="tutorial_string_array">
        <item>Its easy to learn math with us,you have a simple goal,reach the big number in black using all four numbers given,press next to continue</item>
        <item>now we will choose a number,lets say 6</item>
        <item>lets choose an operator,lets try plus</item>
        <item>Now lest choose another number to add to 6,lets go with 1</item>
        <item>Now together we have 7,lets try to subtract 4 from the 7,we will choose minus first this time</item>
        <item>and now we can pick the number we want to subtract from first we will pick 7</item>
        <item>we want to subtract 4 from it so we will pick 4</item>
        <item>Grate,we are close,lets pick the 3</item>
        <item>And now we can pick the plus operator</item>
        <item>Lets pick the other 3</item>
        <item>Grate! we reached our goal,press next to continue</item>
        <item>After reaching our goal in stage mode you can press the home button ,restart the level or press the next button for next stage,Press next please</item>
        <item>This is the arcade mode,here you have 01:30 minutes to solve as much as you can,you got 3 Lifebuoys that will change you question and will cost you 10 seconds</item>
    </string-array>

    <string-array name="tutorial_string_array_new">
        <item>This is the Tutorial level</item>
        <item>You need to reach this number in order to complete the level</item>
        <item>you need to use all 4 given numbers to do so</item>
        <item>you can use all of the operators any number of times</item>
        <item>Click here to start over the level</item>
        <item>You can get a hint by clicking the buoy.\n
            ***on the arcade mode each buoy will change question and cost you 10 seconds***</item>
    </string-array>

    <string name="finish">Finish</string>
    <string name="tutorial_level">Tutorial level</string>
    <string name="Tap_me_to_continue">Tap me to continue</string>
    <string name="stage">stage</string>
    <string name="enter_your_name_or_nickname">Enter your name or nickname</string>
    <string name="example">example</string>
    <string name="done">Done</string>
    <string name="claimFreeCoins">You can claim free coins every 6h</string>
    <string name="free_coins_in">free coins</string>
    <string name="you_score_is">Your score is :</string>
    <string name="arcadeModeHintIBTN3">arcadeModeHintIBtn3</string>
    <string name="arcadeModeHintIBTN2">arcadeModeHintIBtn2</string>
    <string name="arcadeModeHintIBTN1">arcadeModeHintIBtn1</string>
    <string name="arcadeModeBackIBTN">arcadeModeBackIB</string>
    <string name="nickname">Nickname:</string>
    <string name="test_string">test string</string>
    <string name="edit_nickname_ibtn">edit nickname ibtn</string>
    <string name="exit_setting_btn">exit setting btn</string>
    <string name="levels_screen_back_ibtn">levels screen back iBtn</string>
    <string name="level_scree_logo">level scree logo</string>
    <string name="dialog_image">dialog image</string>
    <string name="start_screen_logo">start screen logo</string>
    <string name="hint_btn_stage">hint btn stage</string>
    <string name="number_test">2</string>
    <string name="scoreboard_icon">scoreBoard icon</string>
    <string name="store_icon">store icon</string>
    <string name="rate_us_button">rate us button</string>
    <string name="contact_us">Contact us</string>
    <string name="app_icon">app icon</string>
    <string name="version">Version: 1.0.4v</string>
    <string name="credits">Credits:</string>
    <string name="aptekar_ilya">Aptekar Ilya</string>
    <string name="granovsky_ronald">Granovsky Ronald</string>
    <string name="freepik_credit">Icon made by Freepik from www.flaticon.com</string>
    <string name="vectors_credit">Icon made by Vectors Market from www.flaticon.com</string>
    <string name="smashicons_credit">Icon made by Smashicons from www.flaticon.com</string>
    <string name="dinosoftlabs_credit">Icon made by DinosoftLabs from www.flaticon.com</string>
    <string name="animation_x_credit">Animation by @华灯初上 /LottieFiles</string>
    <string name="animation_splash_credit">Animation by @Splash Animation /LottieFiles</string>
    <string name="animation_wassink_credit">Animation by @Studio Wassink /LottieFiles</string>
    <string name="animation_ada_credit">Animation by @ada /LottieFiles</string>
    <string name="sound_eff_credit_zapsplat">Sound effects obtained from www.zapsplat.com“</string>
    <string name="sound_eff_credit_freesound_org">Sound effect by unadamlar and grunz from freesound.org</string>
    <string name="creativcommons_org_licenses">https://creativecommons.org/licenses/by/3.0/legalcode</string>
    <string name="developed_by"><![CDATA[2020 A&G_Develop inc. All rights reserved]]></string>
    <string name="copyright_simbol">copyright simbol</string>
    <string name="coins_text">coins text</string>
    <string name="free_coin">free Coin</string>
    <string name="video_coins">Video Coins</string>
    <string name="well_done">Well Done!</string>

</resources>
