<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_element_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/fragment_background"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/seekBarMainSoundRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvSettingHeadLine"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSettingHeadLine"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_sound"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/seekBarMainSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:thumb="@drawable/ic_seekbar_bar" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/seekBarSoundEffectsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarMainSoundRelativeLayout"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_effects"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarSoundEffects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:thumb="@drawable/ic_seekbar_bar" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGameReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarSoundEffectsRelativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/reset_game"
        android:text="@string/reset_game_levels"
        android:textAllCaps="false" />

    <ImageButton
        android:id="@+id/btnCloseSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@color/Transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/close_icon" />
</RelativeLayout>