<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_change"
    android:layoutDirection="ltr"
    android:padding="2dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnScoreBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGameLogo">

        <Button
            android:id="@+id/btnStageModeShine"
            android:layout_width="255dp"
            android:layout_height="65dp"
            android:alpha="0.1"
            android:background="@drawable/stage_btn" />

        <Button
            android:id="@+id/btnStageMode"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/stage_btn"
            android:text="@string/Stage_mode"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnArcadeModeShine"
            android:layout_width="255dp"
            android:layout_height="65dp"
            android:layout_below="@id/btnStageMode"
            android:layout_centerInParent="true"
            android:alpha="0.1"
            android:background="@drawable/arcade_btn" />

        <Button
            android:id="@+id/btnArcadeMode"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@id/btnStageMode"
            android:background="@drawable/arcade_btn"
            android:text="@string/Arcade_mode"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTutorialShine"
            android:layout_width="255dp"
            android:layout_height="65dp"
            android:layout_below="@id/btnArcadeMode"
            android:layout_centerInParent="true"
            android:alpha="0.1"
            android:background="@drawable/tutorial_btn_background" />

        <Button
            android:id="@+id/btnTutorial"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@id/btnArcadeMode"
            android:layout_centerInParent="true"
            android:background="@drawable/tutorial_btn_background"
            android:text="@string/tutorial"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <ImageView
        android:id="@+id/ivGameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="logo"
        android:src="@drawable/makeiteven_v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageButton
        android:id="@+id/btnScoreBoard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Transparent"
        android:contentDescription="scoreBoard icon"
        android:src="@drawable/ic_trophy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/IBtnStoreStageMode"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="store icon"
        android:src="@drawable/ic_store"
        app:layout_constraintBottom_toBottomOf="@+id/btnScoreBoard"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>