<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:id="@+id/confetti_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/backButtonIB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/arcadeModeBackIBTN"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.13" />

    <ImageButton
        android:id="@+id/hintButtonIB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/arcadeModeHintIBTN1"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/hintButton2IB"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.13" />

    <ImageButton
        android:id="@+id/hintButton2IB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/arcadeModeHintIBTN2"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/hintButton3IB"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.13" />

    <ImageButton
        android:id="@+id/hintButton3IB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/arcadeModeHintIBTN3"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.13" />

    <TextView
        android:id="@+id/timerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.2"
        tools:text="2:30" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/scoreTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/actualScoreTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintWidth_percent="0.2"
            tools:text="10" />
    </LinearLayout>

    <TextView
        android:id="@+id/theTargetNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="20sp"
        android:fontFamily="@font/itim_regular"
        android:textColor="#001E73"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintWidth_percent="0.2"
        tools:text="5"
        tools:targetApi="o" />

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/group_choices_of_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/group_choices_of_operators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:tbgChildSpacingForLastRow="align"
        app:tbgRowSpacing="5dp">

        <ToggleButton
            android:id="@+id/btn1TB"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:background="@drawable/game_qube_btns"
            android:fontFamily="@font/robotoslab_bold"
            android:maxHeight="120dp"
            android:minHeight="60dp"
            android:padding="5dp"
            android:textColor="#fff"
            android:textOff=""
            android:textOn=""
            android:textSize="40sp"
            tools:textOff="5" />

        <ToggleButton
            android:id="@+id/btn2TB"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:background="@drawable/game_qube_btns"
            android:fontFamily="@font/robotoslab_bold"
            android:padding="5dp"
            android:textColor="#fff"
            android:textOff=""
            android:textOn=""
            android:textSize="40sp"
            tools:textOff="5" />

        <ToggleButton
            android:id="@+id/btn3TB"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:background="@drawable/game_qube_btns"
            android:fontFamily="@font/robotoslab_bold"
            android:padding="5dp"
            android:textColor="#fff"
            android:textOff=""
            android:textOn=""
            android:textSize="40sp"
            tools:textOff="5" />

        <ToggleButton
            android:id="@+id/btn4TB"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:background="@drawable/game_qube_btns"
            android:fontFamily="@font/robotoslab_bold"
            android:padding="5dp"
            android:textColor="#fff"
            android:textOff=""
            android:textOn=""
            android:textSize="40sp"
            tools:textOff="5" />
    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/group_choices_of_operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <ToggleButton
            android:id="@+id/plusTB"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/selector_plus_img"
            android:soundEffectsEnabled="false"
            android:tag="plus"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/minusTB"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/selector_minus_img"
            android:soundEffectsEnabled="false"
            android:tag="minus"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/multiplyTB"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/selector_multipliction_img"
            android:soundEffectsEnabled="false"
            android:tag="mul"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/divideTB"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/selector_division_img"
            android:soundEffectsEnabled="false"
            android:tag="div"
            android:textOff=""
            android:textOn="" />


    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/countDownAnim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_change"
        app:lottie_loop="false"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />
</androidx.constraintlayout.widget.ConstraintLayout>